--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Generated databases
+*.db
+
 # Logs
 logs
 *.log
@@ -5,8 +8,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-
-*.db
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
