--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bedrunka is the largest provider of international groceries.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
